--- a/components/search.module.css
+++ b/components/search.module.css
@@ -1,7 +1,9 @@
 .__search{
     display: flex;
     align-content: center;
-    width: 40%;
+    width: 100%;
+    height: fit-content;
+    max-width: 40%;
 }
 
 .__input{
@@ -30,4 +32,35 @@
 
 .__search_btn:hover{
     opacity: .9;
+}
+
+
+
+@media only screen and (max-width: 1200px){
+    .__search{
+        max-width: 35%;
+    }
+}
+
+@media only screen and (max-width: 992px){
+    .__search{
+        max-width: 50%;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .__input{
+        padding: 4px 15px;
+        font-size: 14px;
+    }
+    .__search_btn{
+        padding: 4px 15px;
+    }
+}
+
+@media only screen and (max-width: 576px){
+    .__search{
+        max-width: 70%;
+        border: 1px solid rab(0 0 0/ 10%);
+    }
 }
