--- a/components/nav.module.css
+++ b/components/nav.module.css
@@ -12,3 +12,13 @@
     display: inline-block;
     padding: 0px 10px;
 }
+
+.__nav_link:active{
+    color: var(--primary-theme);
+    font-weight: 600;
+}
+
+@media only screen and (max-width: 1200px){
+    .__nav{margin: 0 10px;}
+    .__nav_link{font-size: 15px;}
+}
