--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -65,5 +65,10 @@
 }
 
 @media only screen and (max-width: 576px){
-    .__logo{display: none;}
+    /* .__logo{display: none;} */
+    .__logo{
+        margin-right: auto;
+        margin-left: 10px;
+        width: 90px;
+    }
 }
