change sidebar width

--- a/components/sidebar.module.css
+++ b/components/sidebar.module.css
@@ -6,7 +6,7 @@
     height: 100%;
     background: #fff;
     position: fixed;
-    left: -100%;
+    left: -255px;
     top: 0;
     box-shadow: 0 0 6px rgb(0 0 0 / 5%);
     transition: .4s ease-in-out;
