change some file

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
 
 :root{
   --primary-theme: #11ae68;
+  /* --primary-theme: #08A55F; */
   --primary-theme-1: #41be86;
   --primary-theme-2: #a1e6c7;
   --primary-theme-3: #e7f9f1;
