--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,7 @@
     display: block;
     height: fit-content;
     overflow: hidden;
+    margin: 20px 0;
 }
 
 
@@ -74,6 +75,7 @@
 
 @media only screen and (max-width: 992px){
     .__hero_section{
+        margin: 8px 0;
         height: fit-content;
     }
     .__menu_col{
