--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -62,6 +62,37 @@
     padding: 6px 15px;
 }
 
+
+/* product cart */
+._product_category{
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: rgba(0, 0, 0, .3);
+}
+
+._product_image{
+    padding: 5px;
+    border: 1px solid rgb(0 0 0 / 10%);
+}
+
+.see_more_btn{
+    font-size: 14px;
+    color: #11ae68;
+}
+.see_more_btn:hover{
+    color: #11ae68;
+    text-decoration: underline;
+}
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 1400px){
     .__menu_section{
         height: 450px;
