--- a/components/sidebar.module.css
+++ b/components/sidebar.module.css
@@ -10,6 +10,7 @@
     top: 0;
     box-shadow: 0 0 6px rgb(0 0 0 / 5%);
     transition: .4s ease-in-out;
+    z-index: 10;
 }
 
 .__sidebar_wrapper.__active{
