--- a/components/sidebar.module.css
+++ b/components/sidebar.module.css
@@ -1,13 +1,32 @@
+
+.__sidebar{
+    width: 100%;
+    max-width: 250px;
+    height: 100%;
+    position: fixed;
+    overflow: hidden;
+    left: -255px;
+    top: 0;
+    z-index: 9;
+    transition: .2s ease-in-out;
+    background: rgba(0, 0, 0, 0.01);
+}
+.__sidebar.__active{
+    max-width: 100%;
+    left: 0;
+}
+
 .__sidebar_wrapper{
     width: 100%;
     max-width: 250px;
+    position: absolute;
     overflow: hidden;
+    left: -255px;
+    top: 0;
+    z-index: 10;
     padding: 20px 20px;
     height: 100%;
     background: #fff;
-    position: fixed;
-    left: -255px;
-    top: 0;
     box-shadow: 0 0 6px rgb(0 0 0 / 5%);
     transition: .4s ease-in-out;
     z-index: 10;
