--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,7 @@
 
 .__menu_section{
     width: 100%;
-    height: 520px;
+    height: 500px;
     max-width: 300px;
     background: #fff;
 }
@@ -87,20 +87,16 @@
 }
 
 
-
-
-
-
-
+/* responsive */
 
 @media only screen and (max-width: 1400px){
     .__menu_section{
-        height: 450px;
+        height: 435px;
     }
 }
 @media only screen and (max-width: 1200px){
     .__menu_section{
-        height: 375px;
+        height: 365px;
     }
 }
 
