--- a/components/mSearch.module.css
+++ b/components/mSearch.module.css
@@ -5,8 +5,10 @@
     top: 100%;
     left: 0;
     width: 100%;
+    background: #fff;
     border-top: 1px solid rgb(0 0 0 / 10%);
     border-bottom: 2px solid var(--primary-theme);
+    z-index: 10;
 }
 .__input{
     width: 100%;
