--- a/components/mSearch.module.css
+++ b/components/mSearch.module.css
@@ -9,6 +9,7 @@
     border-top: 1px solid rgb(0 0 0 / 10%);
     border-bottom: 2px solid var(--primary-theme);
     z-index: 10;
+    box-shadow: 0 3px 6px rgb(0 0 0 / 20%);
 }
 .__input{
     width: 100%;
