update some change

--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -66,7 +66,7 @@
 @media only screen and (max-width: 768px){
     .__wrapper{height: 60px;}
     .__logo{ width: 110px;}
-    .__fev,
+    .__fav,
     .__profile,
     .__msearch{
         margin-right: 10px;
