--- a/components/mSearch.module.css
+++ b/components/mSearch.module.css
@@ -1,15 +1,22 @@
-.__search{
-    display: flex;
-    align-items: center;
+.__wrapper{
     position: absolute;
     top: 100%;
     left: 0;
+    width: 100%;
+    min-height: 100%;
+    z-index: 10;
+    background: #fff;
+}
+
+.__search{
+    display: flex;
+    align-items: center;
     width: 100%;
     background: #fff;
     border-top: 1px solid rgb(0 0 0 / 10%);
     border-bottom: 2px solid var(--primary-theme);
     z-index: 10;
-    box-shadow: 0 3px 6px rgb(0 0 0 / 20%);
+    /* box-shadow: 0 3px 6px rgb(0 0 0 / 20%); */
 }
 .__input{
     width: 100%;
@@ -26,4 +33,38 @@
     padding: 8px 15px;
     color: #9fa2ad;
     background: #fff;
+}
+
+
+.__autocom{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    min-height: 100%;
+    background: rgb(255, 255, 255);
+    overflow: hidden;
+    padding: 10px 20px;
+    box-shadow: 0 3px 6px rgb(0 0 0 / 10%);
+}
+.__book{
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+}
+.__product_img{
+    width: 40px;
+    margin-right: 10px;
+}
+.__product_text{
+    flex: 1;
+}
+.__product_text p{
+    margin: 0;
+    padding: 0;
+    font-size: 13px;
+}
+.__product_text span{
+    font-size: 11px;
+    color: rgb(133, 138, 141);;
 }
