--- a/components/search.module.css
+++ b/components/search.module.css
@@ -46,8 +46,8 @@
     left: 0;
     padding: 20px;
     z-index: 1;
+    display: block;
     height: 400px;
-    max-height: 400px;
     background: #fff;
     border-radius: 20px;
     box-shadow: 0 3px 6px rgb(0 0 0 / 10%);
@@ -73,7 +73,7 @@
     font-size: 15px;
 }
 .__product_text span{
-    font-size: 13px;
+    font-size: 12px;
     color: rgb(122, 131, 141)
 }
 
@@ -81,6 +81,9 @@
 @media only screen and (max-width: 1200px){
     .__search{
         max-width: 35%;
+    }
+    .__product_text p{
+        font-size: 13px;
     }
 }
 
@@ -97,6 +100,9 @@
     }
     .__search_btn{
         padding: 4px 15px;
+    }
+    .__recom{
+        padding: 10px;
     }
 }
 
