--- a/styles/Details.module.css
+++ b/styles/Details.module.css
@@ -1,103 +1,216 @@
-.__top_section{
-    display: block;
-    padding: 50px;
-    background: #fff;
-    border-radius: 10px;
-    margin: 20px 0;
+.__top_section {
+  display: block;
+  padding: 50px;
+  background: #fff;
+  border-radius: 10px;
+  margin: 20px 0;
 }
 
-.__product_title{
-    font-family: 'Lato', sans-serif;
+.__product_title {
+  font-family: "Lato", sans-serif;
 }
 
-.__product_details{
-    display: flex;
-    align-items: center;
-    padding: 5px 0;
-    font-size: 15px;
-    color: rgb(50, 54, 61);
-    font-family: 'Lato', sans-serif;
+.__product_details {
+  display: flex;
+  align-items: center;
+  padding: 5px 0;
+  font-size: 15px;
+  color: rgb(50, 54, 61);
+  font-family: "Lato", sans-serif;
 }
 
-.__product_details span{
-    color: rgb(19, 19, 20);
-    font-family: 'Lato', sans-serif;
+.__product_details span {
+  color: rgb(19, 19, 20);
+  font-family: "Lato", sans-serif;
 }
 
 .__product_details p {
-    font-weight: 600;
-    font-size: 18px;
-    color: var(--primary-theme);
+  font-weight: 600;
+  font-size: 18px;
+  color: var(--primary-theme);
 }
 .__product_details p sub {
-    color: red;
-    font-size: 13px;
+  color: red;
+  font-size: 13px;
 }
 
-.__product_details i{
-    font-size: 15px;
+.__product_details i {
+  font-size: 15px;
 }
 
-
-.__qantity{
-    width: 60px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    border: 1px solid rgb(0 0 0 / 20%);
+.__qantity {
+  width: 60px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  border: 1px solid rgb(0 0 0 / 20%);
 }
-.__qantity_num{
-    border: none;
-    width: 100%;
-    font-size: 14px;
-    padding: 0 8px;
+.__qantity_num {
+  border: none;
+  width: 100%;
+  font-size: 14px;
+  padding: 0 8px;
 }
-.__qantity_num:focus{
-    outline: none;
+.__qantity_num:focus {
+  outline: none;
 }
 
 .__less_btn,
-.__more_btn{
-    outline: none;
-    display: block;
-    padding: 0;
-    border: 0;
-    height: 15px;
-    background: none;
-    color: rgb(0 0 0 / 70%);
+.__more_btn {
+  outline: none;
+  display: block;
+  padding: 0;
+  border: 0;
+  height: 15px;
+  background: none;
+  color: rgb(0 0 0 / 70%);
 }
 
 .__less_btn:hover,
-.__more_btn:hover{
-    color: #000;
+.__more_btn:hover {
+  color: #000;
+}
+
+.__btn_group {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+}
+
+/* description */
+.__descript {
+  display: block;
+  padding: 50px;
+  background: #fff;
+  border-radius: 10px;
+  margin: 20px 0;
+}
+
+.__section_header {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 25px;
+}
+
+.__product_description {
+  padding: 15px 0;
+}
+.__product_description h6 {
+  font-weight: 600;
+  font-size: 14px;
+  color: rgb(58, 61, 65);
+}
+
+.__product_description p {
+  font-size: 14px;
+  color: rgb(84, 89, 94);
+}
+
+.__auth_details {
+  display: flex;
+  padding: 20px 0;
+  overflow: hidden;
+}
+
+.__auth_img_wrapper {
+  width: 100px;
+  border-radius: 100%;
+}
+.__auth_img {
+  border-radius: 100%;
+}
+
+.__auth_profile {
+  flex: 1;
+  padding-left: 15px;
+}
+.__auth_profile h6 {
+  font-weight: 600;
+  font-size: 14px;
+  color: rgb(102, 108, 114);
+}
+._auth_details_con {
+  height: 100%;
+  max-height: 300px;
+  overflow: hidden;
+  position: relative;
+}
+._auth_details_con::after {
+  content: "";
+  width: 100%;
+  height: 30px;
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 62%,
+    rgba(255, 255, 255, 1) 100%
+  );
+}
+.__auth_profile p {
+  font-size: 14px;
+  color: rgb(102, 108, 114);
+}
+
+.__see_more_auth_details {
+  font-size: 14px;
+  color: rgb(102, 108, 114);
+}
+
+/* product specification */
+.__product_spec {
+  padding: 10px 0;
+}
+
+.__spec_table {
+  border: 1px solid rgb(0 0 0 / 10%);
+}
+.__spec_table tbody tr:nth-child(even) {
+  background: rgb(250, 250, 250);
+}
+.__spec_table tbody tr td {
+  padding: 8px 10px;
+  font-size: 14px;
+  border: 1px solid rgb(0 0 0 / 5%);
+  color: rgb(0 0 0 / 80%);
+}
+.__spec_header {
+  width: 140px;
+}
+.__spec_text {
+  width: 600px;
 }
 
 
 
-@media only screen and (max-width: 768px){
-    .__top_section{
-        padding: 20px;
-        margin: 10px 0;
-    }
-    .__product_img{
-        width: 120px;
-        height: 200px;
-    }
+@media only screen and (max-width: 768px) {
+  .__top_section {
+    padding: 20px;
+    margin: 10px 0;
+  }
+  .__product_img {
+    width: 120px;
+    height: 200px;
+  }
 
-    .__product_title{
-        font-size: 18px;
-    }
-    .__product_details{
-        font-size: 14px;
-    }
-    .__product_details p{
-        font-size: 16px;
-    }
-    .__product_details p sub{
-        font-size: 12px;
-    }
-    .__product_details i{
-        font-size: 14px;
-    }
+  .__product_title {
+    font-size: 18px;
+  }
+  .__product_details {
+    font-size: 14px;
+  }
+  .__product_details p {
+    font-size: 16px;
+  }
+  .__product_details p sub {
+    font-size: 12px;
+  }
+  .__product_details i {
+    font-size: 14px;
+  }
 }
