--- a/components/tab.module.css
+++ b/components/tab.module.css
@@ -34,3 +34,19 @@
     padding: 10px 0;
     border-bottom: 1px solid rgb(0 0 0 / 5%);
 }
+
+
+@media only screen and (max-width: 768px) {
+    .__tab_buttons{
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .__tab_buttons{
+        font-size: 14px;
+    }
+    .__tab_btn{
+        padding: 6px 8px;
+    }
+}
