--- a/components/mSearch.module.css
+++ b/components/mSearch.module.css
@@ -45,6 +45,7 @@
     background: rgb(255, 255, 255);
     overflow: hidden;
     padding: 10px 20px;
+    z-index: 1;
     box-shadow: 0 3px 6px rgb(0 0 0 / 10%);
 }
 .__book{
