--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -51,8 +51,24 @@
 }
 
 
+@media only screen and (max-width: 992px){
+    .__login_container{ 
+        padding: 30px 0;
+    }
+}
+
 @media only screen and (max-width: 768px){
-    .__login_container{
-        
+    .__login_container{ 
+        padding: 30px 0;
+    }
+}
+
+@media only screen and (max-width: 576px){
+    .__login_container{ 
+        padding: 10px 0;
+    }
+    .__wrapper{
+        padding: 40px 20px;
+        border-radius: 6px;
     }
 }
