--- a/components/phonemenu.module.css
+++ b/components/phonemenu.module.css
@@ -4,6 +4,7 @@
     bottom: 20px;
     z-index: 50;
     background: transparent;
+    display: none;
 }
 
 .__p_menu_con{
@@ -89,4 +90,12 @@
     padding: 5px 10px;
     text-align: left;
     color: #fff !important;
+}
+
+
+/* responsive */
+@media only screen and (max-width: 752px){
+    .__p_menu{
+        display: block;
+    }
 }
