--- a/styles/mycart.module.css
+++ b/styles/mycart.module.css
@@ -1,116 +1,311 @@
-.__wrapper{
-    display: block;
-    padding: 30px 0;
+.__wrapper {
+  display: block;
+  padding: 30px 0;
 }
 
-.__table_con{
+.__table_con {
+  display: block;
+  padding: 20px 30px;
+  background: #fff;
+  border-radius: 10px;
+  height: 100%;
+  min-height: 400px;
+}
+
+.__header {
+  display: block;
+  font-size: 15px;
+  display: flex;
+  padding: 10px 0;
+  font-weight: 600;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(0 0 0 / 10%);
+}
+
+.__table {
+  width: 100%;
+  display: block;
+}
+
+.__table_header {
+  display: flex;
+  align-items: center;
+}
+
+.__th {
+  width: 100%;
+  font-size: 15px;
+  font-weight: 600;
+  padding: 20px 0;
+}
+
+.__table_body {
+  display: flex;
+  padding: 8px 0;
+  /* border-bottom: 1px solid rgb(0 0 0 / 5%); */
+}
+
+.__td {
+  width: 100%;
+  font-size: 14px;
+}
+
+.__td:last-child {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.__td_1 {
+  max-width: 60px;
+  padding-right: 10px;
+}
+.__td_2 {
+  max-width: 300px;
+  padding-right: 10px;
+}
+.__td_3 {
+  max-width: 150px;
+  padding-right: 10px;
+}
+.__td_4 {
+  max-width: 150px;
+  padding-right: 10px;
+}
+.__td_5 {
+  max-width: 150px;
+  padding-right: 10px;
+}
+.__td_6 {
+  max-width: 100px;
+}
+
+/* checkout */
+.__checkout {
+  background: #fff;
+  height: fit-content;
+  width: 100%;
+  max-width: 280px;
+  padding: 40px 30px;
+  border-radius: 10px;
+}
+
+.__gift {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  padding: 8px 0;
+}
+
+.__gift_txt {
+  margin-left: 10px;
+  margin-right: auto;
+}
+
+.__checkout_item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  padding: 8px 0;
+}
+
+.__checkout_total {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 15px;
+  padding: 6px 0;
+  border-top: 1px solid rgb(0 0 0 / 10%);
+}
+
+.__checkout_total_label,
+.__total_price {
+  font-weight: 600;
+}
+
+.__checkout_btn {
+  width: 100%;
+  font-size: 15px;
+  margin-top: 10px;
+}
+
+/* mobile checkout */
+.__mobile_checkout {
+  width: 100%;
+  border-top: 1px solid rgb(0 0 0 / 5%);
+  display: flex;
+  padding: 20px 0;
+  display: none;
+  height: fit-content;
+}
+.__checkout_wrap {
+  width: 100%;
+}
+
+/* Responsive */
+@media only screen and (max-width: 1400px) {
+  .__td_1 {
+    max-width: 60px;
+  }
+  .__td_2 {
+    max-width: 280px;
+  }
+  .__td_3 {
+    max-width: 150px;
+  }
+  .__td_4 {
+    max-width: 100px;
+  }
+  .__td_5 {
+    max-width: 100px;
+  }
+  .__td_6 {
+    max-width: 50px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .__td_1 {
+    max-width: 60px;
+  }
+  .__td_2 {
+    max-width: 280px;
+  }
+  .__td_3 {
+    max-width: 120px;
+  }
+  .__td_4 {
+    max-width: 80px;
+  }
+  .__td_5 {
+    max-width: 100px;
+  }
+  .__td_6 {
+    max-width: 50px;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .__td_1 {max-width: 40px;}
+  .__td_2 { max-width: 280px;}
+  .__td_3 {max-width: 120px;}
+  .__td_4 {display: none;}
+  .__td_5 {max-width: 100px;}
+  .__td_6 {max-width: 50px;}
+
+  .__checkout {display: none;}
+  .__checkout_btn {
+    width: 200px;
+    float: right;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .__mobile_checkout {
     display: block;
-    padding: 20px 30px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .__wrapper {
+    display: block;
+    padding: 10px 0;
+  }
+
+  .__table_con {
+    display: block;
+    padding: 20px 20px;
     background: #fff;
     border-radius: 10px;
     height: 100%;
     min-height: 400px;
+  }
+
+  .__td_1 {
+    max-width: 60px;
+  }
+  .__td_2 {
+    max-width: 350px;
+  }
+  .__td_3 {
+    display: none;
+  }
+  .__td_5 {
+    max-width: 100px;
+    display: none;
+  }
+  .__td_6 {
+    max-width: 100px;
+    text-align: right;
+  }
+  .__td_6 p {
+    font-size: 11px;
+    color: red;
+  }
+
+  .__checkout {
+    display: none;
+  }
+  .__mobile_checkout {
+    display: block;
+  }
+  .__checkout_btn {
+    min-width: 100%;
+    float: right;
+    margin-top: 20px;
+  }
+  .__product_title {
+    display: block;
+    width: 300px;
+    height: 40px;
+    font-size: 14px;
+    margin-bottom: 8px;
+    white-space: normal;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
 }
 
-.__header{
+@media only screen and (max-width: 576px) {
+  .__wrapper {
     display: block;
-    font-size: 15px;
-    display: flex;
     padding: 10px 0;
-    font-weight: 600;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid rgb(0 0 0 / 10%);
-}
+  }
 
-.__table{
-    width: 100%;
+  .__table_con {
     display: block;
-}
-
-.__table_header{
-    display: flex;
-    align-items: center;
-}
-
-.__th{
-    width: 100%;
-    font-size: 15px;
-    font-weight: 600;
-    padding: 20px 0;
-}
-
-.__table_body{
-    display: flex;
-    padding: 8px 0;
-    /* border-bottom: 1px solid rgb(0 0 0 / 5%); */
-}
-
-.__td{
-    width: 100%;
-    font-size: 14px;
-}
-
-.__td:last-child{
-    font-size: 14px;
-    font-weight: 600;
-}
-
-.__td_1{max-width: 60px; padding-right: 10px;}
-.__td_2{max-width: 300px; padding-right: 10px;}
-.__td_3{max-width: 150px; padding-right: 10px;}
-.__td_4{max-width: 150px; padding-right: 10px;}
-.__td_5{max-width: 150px; padding-right: 10px;}
-.__td_6{max-width: 100px;}
-
-
-/* checkout */
-.__checkout{
+    padding: 20px 20px;
     background: #fff;
-    height: fit-content;
-    width: 280px;
-    padding: 40px 30px;
-    border-radius: 10px;
-    margin-left: 25px;
-}
+    height: 100%;
+    min-height: 400px;
+  }
 
-.__gift{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 14px;
-    padding: 8px 0;
-}
-
-.__gift_txt{
-    margin-left: 10px;
-    margin-right: auto;
-}
-
-.__checkout_item{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 14px;
-    padding: 8px 0;
-}
-
-.__checkout_total{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 15px;
-    padding: 6px 0;
-    border-top: 1px solid rgb(0 0 0 / 10%);
-}
-
-.__checkout_total_label,
-.__total_price{
-    font-weight: 600;
-}
-
-.__checkout_btn{
+  .__td_1 {max-width: 60px; min-width: 60px;}
+  .__td_2 { max-width: 280px; min-width: 150px;}
+  .__td_5 { max-width: 80px;display: none;}
+  .__td_6 {max-width: 80px; text-align: right;}
+  .__td_6 p {font-size: 11px;color: red;}
+  .__checkout { display: none;}
+  .__checkout_btn {
+    width: 200px;
+    float: right;
+    margin-top: 20px;
+  }
+  .__product_title {
+    display: block;
     width: 100%;
-    font-size: 15px;
-    margin-top: 10px;
+    max-width: 280px;
+    min-width: 150px;
+    height: 40px;
+    font-size: 14px;
+    white-space: normal;
+    margin-bottom: 8px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
 }
