--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,74 +1,84 @@
-.__login_container{
-    min-width: 100%;
-    padding: 80px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.__login_container {
+  min-width: 100%;
+  padding: 80px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
-.__wrapper{
-    width: 100%;
-    max-width: 400px;
-    background: #fff;
-    padding: 40px;
-    border-radius: 10px;
+.__wrapper {
+  width: 100%;
+  max-width: 400px;
+  background: #fff;
+  padding: 40px;
+  border-radius: 10px;
 }
 
-
-.__form_header{
-    padding: 8px 0;
-    font-size: 16px;
-    text-align: center;
-    border-bottom: 1px solid rgb(0 0 0 / 10%);
-    margin-bottom: 20px;
+.__form_header {
+  padding: 8px 0;
+  font-size: 16px;
+  text-align: center;
+  border-bottom: 1px solid rgb(0 0 0 / 10%);
+  margin-bottom: 20px;
 }
 
-.__remember_me{
-    display: flex;
-    align-items: center;
-    padding: 5px 0;
-    font-size: 14px;
-    margin-bottom: 10px;
-    color: rgb(61, 66, 70);
+.__alert {
+  display: block;
+  width: 100%;
+  font-size: 14px;
+  border-radius: 4px;
+  padding: 10px 10px;
+  color: var(--danger-theme);
+  background: var(--danger-theme-3);
 }
 
-
-.__login_btn_con{
-    width: 100%;
-}
-.__login_btn{
-    width: 100% !important;
+.__alert:empty {
+  display: none;
 }
 
-.__forget_section{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 0;
-    font-size: 14px;
-    color: rgb(61, 66, 70);
+.__remember_me {
+  display: flex;
+  align-items: center;
+  padding: 5px 0;
+  font-size: 14px;
+  margin-bottom: 10px;
+  color: rgb(61, 66, 70);
 }
 
-
-@media only screen and (max-width: 992px){
-    .__login_container{ 
-        padding: 30px 0;
-    }
+.__login_btn_con {
+  width: 100%;
+}
+.__login_btn {
+  width: 100% !important;
 }
 
-@media only screen and (max-width: 768px){
-    .__login_container{ 
-        padding: 30px 0;
-    }
+.__forget_section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0;
+  font-size: 14px;
+  color: rgb(61, 66, 70);
 }
 
-@media only screen and (max-width: 576px){
-    .__login_container{ 
-        padding: 10px 0;
-    }
-    .__wrapper{
-        padding: 40px 20px;
-        border-radius: 6px;
-    }
+@media only screen and (max-width: 992px) {
+  .__login_container {
+    padding: 30px 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .__login_container {
+    padding: 30px 0;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .__login_container {
+    padding: 10px 0;
+  }
+  .__wrapper {
+    padding: 40px 20px;
+    border-radius: 6px;
+  }
 }
