--- a/components/dropdown.module.css
+++ b/components/dropdown.module.css
@@ -1,19 +1,31 @@
-.__dropdown{
-    display: block;
-    position: relative;
-    width: 100%;
+.__dropdown {
+  display: block;
+  position: relative;
+  width: 100%;
 }
 
-.__dropdown_toggle{
-    width: 100%;
+.__dropdown_toggle {
+  width: 100%;
 }
-.__dropdown_menu{
-    position: absolute;
-    width: fit-content;
-    z-index: 10;
+.__dropdown_menu {
+  position: absolute;
+  width: fit-content;
+  z-index: 10;
 }
 
-.__top{bottom: 100%; left: 0;}
-.__right{left: 100%; top: 0;}
-.__bottom{top: 100%; left: 0;}
-.__left{right: 100%; top:  0;} 
+.__top {
+  bottom: 100%;
+  left: 0;
+}
+.__right {
+  left: 100%;
+  top: 0;
+}
+.__bottom {
+  top: 100%;
+  left: 0;
+}
+.__left {
+  right: 100%;
+  top: 0;
+}
