--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -1,119 +1,193 @@
-.__header{
-    background: #fff;
-    position: relative;
-    box-shadow: 0 3px 6px rga(0 0 0 / 10px);
+.__header {
+  background: #fff;
+  position: relative;
+  box-shadow: 0 3px 6px rga(0 0 0 / 10px);
 }
 
-.__wrapper{
-    display: flex;
-    height: 80px;
-    align-items: center;
-    justify-content: space-between;
+.__wrapper {
+  display: flex;
+  height: 80px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.__menu_btn{
-    outline: none;
-    border: none;
-    background: transparent;
-    padding: 0;
-    display: none;
+.__menu_btn {
+  outline: none;
+  border: none;
+  background: transparent;
+  padding: 0;
+  display: none;
 }
 
-
-.__action{
-    display: flex;
-    align-items: center;
+.__action {
+  display: flex;
+  align-items: center;
 }
 
 .__fav,
 .__msearch,
-.__profile{
-    margin-right: 20px;
+.__profile {
+  margin-right: 20px;
 }
-.__cart{
-    display: flex;
-    align-items: center;
+.__cart {
+  display: flex;
+  align-items: center;
 }
-.__cart span{
-    white-space: nowrap;
+.__cart span {
+  white-space: nowrap;
 }
-.__msearch{
+.__msearch {
+  display: none;
+}
+
+/* profile */
+
+.__profile {
+  top: 100%;
+  right: -20px;
+  padding: 10px 0;
+}
+
+.__profile_dropdown {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  overflow: hidden;
+}
+
+.__profile_dropdown span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  font-size: 14px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(104, 109, 114);
+  background: rgb(224, 227, 228);
+}
+
+.__profile_dropdown_menu {
+  list-style: none;
+  background: #fff;
+  box-shadow: 0px 0 6px rgb(0 0 0 / 10%);
+  width: 120px;
+  padding: 0;
+}
+
+.__profile_dropdown_item {
+  padding: 0 5px;
+}
+
+.__profile_link {
+  display: block;
+  padding: 5px 10px;
+  font-size: 14px;
+}
+
+.__profile_link:hover {
+  color: rgb(62, 66, 71);
+  background: rgb(247, 248, 250);
+}
+
+@media only screen and (max-width: 1200px) {
+  .__logo {
+    margin-right: 15px;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .__menu_btn {
+    display: block;
+  }
+  .__nav_item {
     display: none;
-}
-.__profile{
+  }
+
+  .__fav_icon,
+  .__cart_icon {
+    width: 20px;
+    height: 20px;
+  }
+  .__cart_details {
     display: none;
+  }
 }
 
-
-@media only screen and (max-width: 1200px){
-    .__logo{margin-right: 15px;}
+@media only screen and (max-width: 768px) {
+  .__wrapper {
+    height: 60px;
+  }
+  .__logo {
+    width: 110px;
+  }
+  .__fav,
+  .__profile,
+  .__msearch {
+    margin-right: 10px;
+  }
+  .__profile_dropdown {
+    width: 20px;
+    height: 20px;
+  }
+  .__profile_dropdown span {
+    font-size: 10px;
+  }
 }
 
-@media only screen and (max-width: 992px){
-    .__menu_btn{display: block;}
-    .__nav_item{display: none;}
+@media only screen and (max-width: 576px) {
+  .__header {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    left: 0;
+    z-index: 9;
+    box-shadow: 0 3px 6px rgb(0 0 0 / 10%);
+  }
 
-    .__fav_icon,
-    .__cart_icon{
-        width: 20px;
-        height: 20px;
-    }
-    .__cart_details{
-        display: none;
-    }
-}
+  .__wrapper {
+    height: 50px;
+  }
+  .__menu_btn {
+    color: rgb(101, 104, 110);
+  }
+  .__menu_icon {
+    width: 18px;
+  }
+  .__logo {
+    margin-right: auto;
+    margin-left: 10px;
+    width: 90px;
+  }
+  .__msearch {
+    display: block;
+  }
 
-@media only screen and (max-width: 768px){
-    .__wrapper{height: 60px;}
-    .__logo{ width: 110px;}
-    .__fav,
-    .__profile,
-    .__msearch{
-        margin-right: 10px;
-    }
-    .__profile{ display: block;}
-}
+  .__fav,
+  .__profile,
+  .__msearch {
+    margin-right: 10px;
+    color: rgb(101, 104, 110);
+  }
+  .__cart {
+    color: rgb(101, 104, 110);
+  }
 
-@media only screen and (max-width: 576px){
-    .__header{
-        position: sticky; 
-        position: -webkit-sticky; 
-        top: 0; 
-        left: 0; 
-        z-index: 9;
-        box-shadow: 0 3px 6px rgb(0 0 0 / 10%);
-    }
+  .__fav_icon,
+  .__cart_icon {
+    width: 16px;
+  }
 
-    .__wrapper{ height: 50px;}
-    .__menu_btn{color: rgb(101, 104, 110);}
-    .__menu_icon{ width: 18px;}
-    .__logo{
-        margin-right: auto;
-        margin-left: 10px;
-        width: 90px;
-    }
-    .__msearch{ display: block;}
-    
-    .__fav,
-    .__profile,
-    .__msearch{
-        margin-right: 10px;
-        color: rgb(101, 104, 110);
-    }
-    .__cart{
-        color: rgb(101, 104, 110);
-    }
+  .__fav:hover,
+  .__cart:hover,
+  .__profile:hover,
+  .__msearch:hover {
+    color: rgb(101, 104, 110);
+  }
 
-    .__fav_icon,
-    .__cart_icon{
-        width: 16px;
-    }
-
-    .__fav:hover,
-    .__cart:hover,
-    .__profile:hover,
-    .__msearch:hover{
-        color: rgb(101, 104, 110);
-    }
-
+  .__profile_link {
+    font-size: 13px;
+  }
 }
